--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"Testing09.aternos.me",
-	"port": "25565",
-	"name": "afkbot"
+	"ip":"AdrianYt2882.aternos.me",
+	"port": "36036",
+	"name": "helder42"
 }
